<resources>
    <string name="app_name">SmartCart</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nombre Usuario</string>
    <string name="nav_header_subtitle">Chango no vinculado</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Clave</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_up">¿No tenés cuenta? Registrate.</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="connection_error">
        Error de conexión. Por favor, revise la conexión a internet e intente nuevamente
    </string>
    <string name="login_error">
        El correo electrónico o la contraseña son incorrectos
    </string>
    <string name="title_activity_desc_producto">Descripción del Producto</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="configurar_conexion">Configurar Conexión</string>
    <string name="title_activity_configurar_conexion">ConfigurarConexionActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_edit_lista_usuario">EditListaUsuarioActivity</string>
    <string name="title_activity_ejemplo">EjemploActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_promos">Promociones Vigentes</string>
</resources>
